限时获取锁的案例

--- a/practice/src/main/webapp/html/qrCode.html
+++ b/practice/src/main/webapp/html/qrCode.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
+<!-- 测试后端生成二维码 -->
 <body>
 	<form action="../qrservlet" method="get">
 		<p>需要生产二维码的文本</p>
